# SportCrawl

./: .coverage  .env  .env.example  .flake8  .gitignore  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.github/hooks/: commit-msg
.github/workflows/: ci.yml  release.yml
chrome-extension/: README.md  background.js  manifest.json
cli/: header.py  main.py  players.py
config/: settings.py
core/: logging.py  types.py
core/application/: base_worker.py  player_list_job_processor.py  scrape_job_processor.py
core/base/: repository.py  scraper.py
core/exceptions/: repository.py  scraper.py  service.py
core/preflight/: __init__.py  checks.py  renderer.py  result.py
core/security/: url_validator.py
docker/: Dockerfile.chromium  entrypoint-chromium.sh
domains/club/: models.py
domains/country/: __init__.py  models.py
domains/player/: enqueuer.py  models.py
domains/player_info/: models.py
domains/shared/: __init__.py
extensions/fbrefly-chrome/: background.js  manifest.json  popup.html  popup.js
extensions/sportcrawl-chrome/: background.js  manifest.json
infrastructure/browser/: __init__.py  engine.py  pydoll_engine.py  remote_cdp_engine.py
infrastructure/display/: worker_display.py
infrastructure/jobs/: __init__.py  job_loop.py
infrastructure/persistence/: session.py
infrastructure/persistence/adapters/: work_queue.py
infrastructure/persistence/migrations/: _filters.py  env.py
infrastructure/persistence/migrations/versions/: 134f2e68682a_initial_scrape_queue.py  5ab3b4f7d8a7_add_provenance.py  a3f8c1d29e5b_create_sch_infra_move_scrape_queue.py  p10a_create_country_tables.py  p10b_refactor_country_pk.py  p10c_drop_public_schema.py  p10d_add_fk_ondelete.py  p11a_player_discovery.py  p11b_scrape_queue_locked_at.py  p11c_player_schema_redesign.py  p11d_schema_fixes.py  p11e_move_player_discovery_to_infra.py  p14a_player_info_schema.py  p14b_scrape_queue_claim_index.py  p14c_player_info_national_team.py  p14d_reorder_fk_national_team.py  p14e_add_uk_home_nations.py  p14f_add_player_info_fk_indexes.py  p14g_scrape_queue_recover_stale_index.py  p14h_scrape_queue_unique_url_job_type.py  p14i_flag_pk_and_player_url_relative.py  p14j_reorder_tbl_flags_columns.py  p14k_fix_player_photo_schema.py  p14l_add_tbl_player_citizenship.py  p14m_add_citizenship_youth_club_to_player_info.py  p15a_add_scrape_queue_job_type_idx.py  p16a_create_country_squads.py  p16b_create_competition_and_teams.py  p8a_lockdown_public.py  p8b_create_sch_shared.py  p8c_create_sch_football.py
infrastructure/persistence/models/: __init__.py  base.py  provenance.py  scrape_queue.py
infrastructure/persistence/models/football/: __init__.py  player_discovery_batch.py  player_queue_ref.py
infrastructure/persistence/models/infra/: __init__.py  player_discovery_batch.py  player_queue_ref.py
infrastructure/persistence/models/shared/: __init__.py  competition.py  confederation.py  country.py  country_squads.py  flag.py  gender.py  player.py  player_citizenship.py  player_info.py  player_photo.py  player_position.py  teams.py
infrastructure/persistence/repositories/: __init__.py  country.py  country_squads.py  player_discovery.py  player_info.py  player_info_queue.py  player_list_queue.py  provenance.py  scrape_queue.py  teams.py
infrastructure/scraping/: countries.py  country_squads.py  country_teams.py  player_info.py  players.py
infrastructure/work_server/: __init__.py  runtime.py  server.py
ports/: browser.py  repository.py  scraper.py  service.py  work_queue.py
scripts/: scrape_countries.py  scrape_country_squads.py  scrape_country_teams.py  scrape_pipeline.py  scrape_player_info.py  scrape_players.py
sdd/phase-10-country-scraper/: design.md  spec.md  tasks.md
tests/: conftest.py
tests/fixtures/: fbref_player_profile.html
tests/integration/: conftest.py  test_p11_migrations.py  test_player_discovery_repository.py  test_player_info_scraping.py  test_provenance.py  test_recover_stale_integration.py  test_scrape_queue.py  test_scrape_queue_repository.py  test_work_server.py
tests/integration/adapters/: test_work_queue_adapter.py
tests/unit/: test_package_stubs.py
tests/unit/application/: test_base_worker.py  test_scrape_job_processor.py
tests/unit/cli/: test_main.py  test_players.py
tests/unit/config/: test_settings.py
tests/unit/core/: test_logging.py
tests/unit/core/base/: test_repository.py  test_scraper.py  test_service.py
tests/unit/core/exceptions/: test_hierarchy.py
tests/unit/core/preflight/: test_checks.py
tests/unit/domains/club/: test_models.py  test_team_models.py
tests/unit/domains/country/: test_models.py
tests/unit/domains/player/: test_enqueuer.py  test_models.py
tests/unit/domains/player_info/: test_models.py
tests/unit/infrastructure/: test_football_base.py  test_job_loop.py  test_pydoll_engine.py  test_runtime.py  test_scrape_queue_model.py  test_session.py  test_ssrf.py  test_work_server.py
tests/unit/infrastructure/adapters/: test_work_queue_adapter.py
tests/unit/infrastructure/browser/: test_remote_cdp_engine.py
tests/unit/infrastructure/jobs/: test_job_loop_drain.py
tests/unit/infrastructure/migrations/: test_env_migrations.py  test_filters.py
tests/unit/infrastructure/repositories/: test_country_squads.py  test_player_discovery.py  test_player_info_queue.py  test_player_info_repository.py  test_player_list_queue.py  test_scrape_queue.py  test_scrape_queue_recover_stale.py  test_teams.py
tests/unit/infrastructure/scraping/: test_countries.py  test_country_squads_e2e.py  test_country_squads_scraper.py  test_country_teams_scraper.py  test_player_info_scraper.py  test_player_list_scraper.py
tests/unit/ports/: test_base_scraper_last_html.py  test_work_queue_protocol.py
tests/unit/scripts/: test_scrape_players.py
tests/unit/work_server/: test_routing.py
