[project]
name = "sportcrawl"
version = "0.12.0"
description = "Multi-sport data scraping infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "pydoll-python>=2.0",
    "aiohttp>=3.14",
    "typer>=0.12",
    "beautifulsoup4>=4.0",
    "lxml>=5.0",
    "pandas>=2.0",
    "rich>=15.0.0",
]

[project.scripts]
sportcrawl = "cli.main:main"
scrape-players = "scripts.scrape_players:main"
scrape-player-info = "scripts.scrape_player_info:run"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["cli*", "core*", "config*", "domains*", "infrastructure*", "ports*", "scripts*"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.20",
    "pip-audit>=2.7",
    "testcontainers[postgres]>=4.0",
    "commitizen>=3.0",
    "import-linter>=2.13",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
extraPaths = ["."]
reportUnusedParameter = "none"

[tool.importlinter]
# tests is included so cross-boundary imports in the test tree are also enforced.
root_packages = ["ports", "domains", "infrastructure", "core", "config", "cli", "tests"]

[[tool.importlinter.contracts]]
name = "domains cannot import from infrastructure"
type = "forbidden"
source_modules = ["domains"]
forbidden_modules = ["infrastructure"]

[[tool.importlinter.contracts]]
# ports may import from core (shared domain kernel — exceptions, types, logging)
# but must never depend on application wiring (config) or adapters (infrastructure/domains).
name = "ports cannot import from config, infrastructure, or domains"
type = "forbidden"
source_modules = ["ports"]
forbidden_modules = ["config", "infrastructure", "domains"]

[[tool.importlinter.contracts]]
# core is the innermost layer — it must not depend on ports or adapters.
name = "core cannot import from ports or infrastructure"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["ports", "infrastructure"]

[[tool.importlinter.contracts]]
name = "infrastructure adapters do not import each other"
type = "independence"
modules = [
    "infrastructure.browser",
    "infrastructure.persistence",
    "infrastructure.work_server",
    "infrastructure.jobs",
    "infrastructure.scraping",
]
# infrastructure.work_server.runtime is the composition root — it wires all
# infrastructure sub-packages together at startup. This is the only permitted
# cross-boundary import; server.py (handlers) must NEVER import from jobs or
# persistence directly. The ignore_imports entries below exempt runtime.py only.
ignore_imports = [
    "infrastructure.work_server.runtime -> infrastructure.jobs.job_loop",
    "infrastructure.work_server.runtime -> infrastructure.persistence.adapters.work_queue",
    "infrastructure.work_server.runtime -> infrastructure.persistence.models.provenance",
    "infrastructure.work_server.runtime -> infrastructure.persistence.repositories.provenance",
    "infrastructure.work_server.runtime -> infrastructure.persistence.repositories.scrape_queue",
    "infrastructure.work_server.runtime -> infrastructure.persistence.session",
    "infrastructure.work_server.runtime -> infrastructure.browser.pydoll_engine",
    "infrastructure.work_server.runtime -> infrastructure.scraping.countries",
    "infrastructure.scraping.countries -> infrastructure.persistence.repositories.country",
    "infrastructure.scraping.countries -> infrastructure.persistence.session",
    "infrastructure.work_server.runtime -> infrastructure.scraping.players",
    "infrastructure.scraping.players -> infrastructure.persistence.repositories.player_discovery",
    "infrastructure.scraping.players -> infrastructure.persistence.session",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.12.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = false
major_version_zero = true

[tool.commitizen.customize]
bump_map = { "feat" = "MINOR", "fix" = "PATCH", "refactor" = "PATCH", "perf" = "PATCH" }
bump_pattern = "^(feat|fix|refactor|perf)(\\(.+\\))?(!)?:"
